# python3-crlx

./: .gitignore  README.MD  pyproject.toml  requirements.txt  setup.py
_scratch/: scratch.ipynb  scratch_merge_apollo.ipynb
crlx/: __init__.py  converters.py  core.py  filters.py  maps.py
crlx/dpa/: co2.py  ts.py
crlx/flagging/: custom.py  qartod.py
crlx/vessel/: sikuliaq.py
examples/: sikuliaq_apollo_ldeo.ipynb
examples/Anna's scripts/: bin_and_load_data.ipynb
scripts/: update_rpi_pkgs.sh
scripts/sikuliaq/: daily_centerboard_depth.py  daily_centerboard_sbe38.py  daily_cs_nav2.py  daily_flow_meter1.py  daily_fwd_mast_wind_a.py  daily_fwd_mast_wind_b.py  daily_gps_cs.py  daily_gps_position.py  daily_gps_position_backup.py  daily_main_lab_oxy.py  daily_main_lab_sbe45a.py  daily_main_lab_sbe45b.py  daily_main_lab_sunav2.py  daily_main_mast_precip.py  daily_met_sta.py  daily_triplet.py  daily_wet_lab_apollo.py  daily_wet_lab_ldeo.py  update_data.sh
tests/: gps_timeit.py
