[project]
name = "python3-crlx"
version = "0.0.1"
authors = [
  { name="Ian Black", email="iantimothyblack@gmail.com" },
]
description = "A package for navigating CORIOLIX."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
[project.urls]
"Homepage" = "https://github.com/IanTBlack/python3-crlx"
"Bug Tracker" = "https://github.com/IanTBlack/python3-crlx/issues"
